--- a/R/RSeQCdocument.Rmd
+++ b/R/RSeQCdocument.Rmd
@@ -56,6 +56,9 @@ metaData = read.table(paste(workingDirectory,metaDataTableFile,sep= "/"), sep = 
 plot =getTINPlots(resultsDir,metaData)
 
 plot
+
+
+print ("")
 ```
 
 
