--- a/R/RSeQCdocument.Rmd
+++ b/R/RSeQCdocument.Rmd
@@ -2,8 +2,9 @@
 title: "Sample QC analysis"
 author: "Johan"
 output:
-  html_document
-  pdf_document
+  html_document:
+      toc: true
+  pdf_document: default
   
 params:
   RfunctionsDirectory: "/glob/johanr/scripts/RNAmappingPipeline/R"
